# food_tracker_bot

./: .gitignore  RULES.md  pyproject.toml
bot/: app.py  config.py
bot/fsm/: states.py
bot/handlers/: add_food.py  common.py  photo.py  start.py
bot/services/: composition_extractor.py  condition_service.py  food_event_service.py  foods_service.py  markdown_helpers.py  photo_intake.py
bot/ui/: callbacks.py  keyboards.py
scripts/: analyze_data.py  test_openrouter_image.py  train_bloating_model.py
tests/: test_breath_features.py  test_config.py  test_filename_sanitize.py  test_foods_service.py  test_fsm_flow.py  test_markdown_helpers.py  test_markdown_render.py  test_photo_intake.py
